random posts twig and toString method in Post entity

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,4 +3,8 @@
 {% block body %}
     <h1>TwigLab</h1>
     <p>This is a project to practice about twig ... and symfony of course ^^.</p>
+
+    <hr>
+
+    <b>Random posts</b>: {{ random(posts) }}
 {% endblock %}
