if var not exits create new var

--- a/app/Resources/views/_footer.html.twig
+++ b/app/Resources/views/_footer.html.twig
@@ -1,1 +1,7 @@
+{% if bar is defined %}
+    {% set bar = bar %}
+{% else %}
+    {% set bar = 'other' %}
+{% endif %}
+
 <h5>Footer <i>{{ bar }}</i></h5>
