--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -12,5 +12,6 @@
 
     {% endfor %}
 
-    {{ include ('_footer.html.twig', {'bar' : 'foo'}) }}
+    {{ include ('_footer.html.twig', {'bar':'foo'}) }}
+    {# include ('_footer.html.twig') #}
 {% endblock %}
