var global and include dinamic

--- a/app/Resources/views/_footer.html.twig
+++ b/app/Resources/views/_footer.html.twig
@@ -7,3 +7,4 @@
 <h5>Footer <i>{{ bar }}</i></h5>
 
 <h6>Copy ({{ year is defined ? year: 'now'|date('Y') }})</h6>
+<p>Author from global var: <b>{{ global.author }}</b></p>
