--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -22,8 +22,14 @@
     {{ MyMacros.printPosts(posts, 'There is not any posts .... other message') }}
 
     {{ _self.MymacroInterna('foo')  }}
-    
+
     {{ include ('_footer.html.twig', {'bar':'foo'}) }}
     {# include ('_footer.html.twig') #}
+
+    {# include if exits #}
+    {% include[
+        '_aside-'~ category ~'.html.twig',
+        '_aside-home.html.twig'
+    ] %}
 
 {% endblock %}
