ignore missing in include

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -30,6 +30,6 @@
     {% include[
         '_aside-'~ category ~'.html.twig',
         '_aside-home.html.twig'
-    ] %}
+    ]  ignore missing  %}
 
 {% endblock %}
